smooth pogress screen and other shit