@@ -1,5 +1,6 @@
 package me.x150.sipprivate.feature.gui.screen;
 
+import com.google.common.util.concurrent.AtomicDouble;
 import me.x150.sipprivate.CoffeeClientMain;
 import me.x150.sipprivate.feature.gui.FastTickable;
 import me.x150.sipprivate.helper.font.FontRenderers;
@@ -15,11 +16,11 @@ import org.apache.logging.log4j.Level;
 import javax.imageio.ImageIO;
 import java.awt.*;
 import java.awt.image.BufferedImage;
+import java.io.BufferedInputStream;
 import java.io.ByteArrayInputStream;
-import java.net.URI;
-import java.net.http.HttpClient;
-import java.net.http.HttpRequest;
-import java.net.http.HttpResponse;
+import java.io.ByteArrayOutputStream;
+import java.net.HttpURLConnection;
+import java.net.URL;
 import java.util.concurrent.atomic.AtomicBoolean;
 
 public class LoadingScreen extends ClientScreen implements FastTickable {
@@ -28,7 +29,8 @@ public class LoadingScreen extends ClientScreen implements FastTickable {
     static Color RED = new Color(255, 50, 20);
     AtomicBoolean loaded = new AtomicBoolean(false);
     AtomicBoolean loadInProg = new AtomicBoolean(false);
-    double progress = 0;
+    //    double progress = 0;
+    volatile AtomicDouble progress = new AtomicDouble();
     double smoothProgress = 0;
     double opacity = 1;
     ClientFontRenderer title = FontRenderers.getCustomNormal(40);
@@ -53,7 +55,8 @@ public class LoadingScreen extends ClientScreen implements FastTickable {
 
     @Override
     public void onFastTick() {
-        smoothProgress = Transitions.transition(smoothProgress, progress, 10, 0.0001);
+        smoothProgress = Transitions.transition(smoothProgress, progress.get(), 10, 0.0001);
+//        smoothProgress = progress.get();
         if (CoffeeClientMain.client.getOverlay() == null) {
             if (!loadInProg.get()) {
                 load();
@@ -69,22 +72,39 @@ public class LoadingScreen extends ClientScreen implements FastTickable {
     void load() {
         loadInProg.set(true);
         new Thread(() -> {
-            HttpClient downloader = HttpClient.newHttpClient();
             for (int i = 0; i < CoffeeClientMain.resources.size(); i++) {
+                double progressBefore = i / ((double) CoffeeClientMain.resources.size());
+                double completedProgress = (i + 1) / ((double) CoffeeClientMain.resources.size());
                 CoffeeClientMain.ResourceEntry resource = CoffeeClientMain.resources.get(i);
                 CoffeeClientMain.log(Level.INFO, "Downloading " + resource.url());
                 try {
-                    HttpRequest hrq = HttpRequest.newBuilder()
-                            .uri(URI.create(resource.url()))
-                            .build();
-                    HttpResponse<byte[]> b = downloader.send(hrq, HttpResponse.BodyHandlers.ofByteArray());
-                    BufferedImage bi = ImageIO.read(new ByteArrayInputStream(b.body()));
+                    URL url = new URL(resource.url());
+                    HttpURLConnection httpConnection = (HttpURLConnection) (url.openConnection());
+                    long completeFileSize = httpConnection.getContentLength();
+
+                    BufferedInputStream in = new BufferedInputStream(httpConnection.getInputStream());
+                    ByteArrayOutputStream bout = new ByteArrayOutputStream();
+                    byte[] data = new byte[16];
+                    long downloadedFileSize = 0;
+                    int x;
+                    while ((x = in.read(data, 0, 16)) >= 0) {
+                        downloadedFileSize += x;
+
+                        double currentProgress = ((double) downloadedFileSize) / ((double) completeFileSize);
+                        progress.set(MathHelper.lerp(currentProgress, progressBefore, completedProgress));
+
+                        bout.write(data, 0, x);
+                    }
+                    bout.close();
+                    in.close();
+                    byte[] imageBuffer = bout.toByteArray();
+                    BufferedImage bi = ImageIO.read(new ByteArrayInputStream(imageBuffer));
                     Utils.registerBufferedImageTexture(resource.tex(), bi);
                     CoffeeClientMain.log(Level.INFO, "Downloaded " + resource.url());
-                } catch (Exception ignored) {
-                    CoffeeClientMain.log(Level.ERROR, "Failed to download " + resource.url());
+                } catch (Exception e) {
+                    CoffeeClientMain.log(Level.ERROR, "Failed to download " + resource.url() + ": " + e.getMessage());
                 } finally {
-                    progress = i / ((double) CoffeeClientMain.resources.size() - 1);
+                    progress.set(MathHelper.lerp(1, progressBefore, completedProgress));
                 }
             }
             loaded.set(true);
